--- a/templates/converter.html
+++ b/templates/converter.html
@@ -19,7 +19,7 @@
         <input type="text" name="to_currency" placeholder="e.g., EUR" class="form-control" required><br>
 
         <label>Amount:</label><br>
-        <input type="number" step="0.01" placeholder="amount" name="amount" class="form-control"><br>
+        <input type="number" step="0.01" placeholder="amount" name="amount" class="form-control" required><br>
 
         <button type="submit" class="btn btn-primary">Convert</button><br><br>
 
